[package]
name = "near-lode"
version = "0.1.0"
authors = ["Luatnd <neo.mxn0@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.0.0-pre.4"
hex = "0.4.3"
borsh = "*"
#serde = { version = "*", features = ["derive"] }
#serde_json = "*"


[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
